--- a/mine/src/main/res/values-en/strings.xml
+++ b/mine/src/main/res/values-en/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="mine_welcome_text">Welcome to Kedong Assistant</string>
-    <string name="mine_login_with_account_password_text">mine_login_with_account_password</string>
-    <string name="mine_login_via_google_text">mine_login_via_google</string>
+    <string name="mine_login_with_account_password_text">mine login with account password</string>
+    <string name="mine_login_via_google_text">mine login via google</string>
 </resources>
